--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .homepage {
   position: relative;
   min-height: 100vh;
-  background: url("./images/Key\ Visual\ 1.jpg") no-repeat center center/cover; /* replace with your image */
+  background: url("./images/Key\ Visual\ 2.jpg") no-repeat center center/cover; /* replace with your image */
   display: flex;
   justify-content: flex-start;
   /* align-items: flex-start; */
@@ -98,7 +98,7 @@ p.tagline {
 .service-page {
   position: relative;
   min-height: 100vh;
-  background: url("./images/449A0592.JPG") no-repeat center center/cover;
+  background: url("./images/Key Visual 1.JPG") no-repeat center center/cover;
   display: flex;
   justify-content: flex-start;
   font-family:'Roboto', 'Oxygen',
